[metadata]
name = ald
version = 0.0.1
author = Angel Yanguas-Gil
author_email = angel.yanguas@gmail.com
description = Simple models for atomic layer deposition
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anglyan/ald.git
project_urls =
    Bug Tracker = https://github.com/anglyan/ald/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
